# ai-healthcare-rag

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  ingest.py  pyproject.toml  rag_app.py  requirements.txt
scripts/: generate_seed_corpus.py
seed_corpus/: cardiology-aortic-stenosis-and-the-role-of-echocardiography.md  cardiology-atrial-fibrillation-rate-control-rhythm-control-and-stroke-prevention.md  cardiology-dyslipidemia-and-statin-therapy-for-cardiovascular-risk-reduction.md  cardiology-heart-failure-with-reduced-ejection-fraction.md  cardiology-hypertension-diagnosis-and-long-term-management.md  cardiology-st-elevation-myocardial-infarction-recognition-and-reperfusion.md  endocrinology-graves-disease-and-management-of-hyperthyroidism.md  endocrinology-hypothyroidism-and-levothyroxine-replacement.md  endocrinology-osteoporosis-screening-and-bisphosphonate-therapy.md  endocrinology-primary-adrenal-insufficiency-addison-s-disease.md  endocrinology-type-1-diabetes-and-insulin-replacement-therapy.md  endocrinology-type-2-diabetes-mellitus-pathophysiology-and-first-line-therapy.md  infectious_disease-clostridioides-difficile-infection-and-treatment.md  infectious_disease-community-acquired-pneumonia-diagnosis-and-antibiotic-selection.md  infectious_disease-hiv-infection-antiretroviral-therapy-and-monitoring.md  infectious_disease-sepsis-recognition-and-early-management.md  infectious_disease-tuberculosis-latent-infection-versus-active-disease.md  infectious_disease-uncomplicated-urinary-tract-infection-in-adults.md  (+30 more)
tests/: test_ingest.py
