[project]
name = "rag-healthcare"
version = "0.1.0"
description = "RAG Healthcare project with vector databases and evaluation tools"
requires-python = ">=3.10,<3.13"
dependencies = [
    "openai>=1.12.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.2.2",
    "transformers",
    "scikit-learn",
    "rank-bm25>=0.2.2",
    "evaluate>=0.4.2",
    "rouge-score>=0.1.2",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pinecone-client>=3.0.0",
    "pymilvus>=2.3.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[tool.uv]
constraint-dependencies = [
    "torch>=2.0.0,<2.3.0",  # PyTorch 2.2.x is last with macOS x86_64 wheels
]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
